fixed spacing of windows on about page

--- a/src/components/about/Terminal.module.scss
+++ b/src/components/about/Terminal.module.scss
@@ -7,7 +7,7 @@
 
   @media only screen and (min-width: 940px) {
     width: 50%;
-    margin: 3rem auto 6rem auto;
+    margin: 3rem auto;
   }
 }
 
